@@ -10,7 +10,6 @@ package io.lighty.yang.validator.formats;
 import static io.lighty.yang.validator.Main.startLyv;
 import static org.testng.Assert.assertEquals;
 
-import com.google.common.collect.ImmutableList;
 import io.lighty.yang.validator.FormatTest;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -39,7 +38,7 @@ public class DependsTest extends FormatTest {
         builder.setDependConfiguration(false, false, true,
                 new HashSet<>());
         final String module = Paths.get(yangPath).resolve("ietf-ipv6-unicast-routing@2018-03-13.yang").toString();
-        builder.setYangModules(ImmutableList.of(module));
+        builder.setYangModules(List.of(module));
         final var configuration = builder.build();
         startLyv(configuration, formatter);
         runDependendsTest("ietf-ipv6-router-advertisements_submodule-dependencies");
@@ -51,7 +50,7 @@ public class DependsTest extends FormatTest {
         builder.setDependConfiguration(false, true, false,
                 new HashSet<>());
         final String module = Paths.get(yangPath).resolve("ietf-ipv6-unicast-routing@2018-03-13.yang").toString();
-        builder.setYangModules(ImmutableList.of(module));
+        builder.setYangModules(List.of(module));
         final var configuration = builder.build();
         startLyv(configuration, formatter);
         runDependendsTest("ietf-ipv6-router-advertisements_import-dependencies");
@@ -63,7 +62,7 @@ public class DependsTest extends FormatTest {
         builder.setDependConfiguration(true, false, false,
                 new HashSet<>());
         final String module = Paths.get(yangPath).resolve("ietf-ipv6-unicast-routing@2018-03-13.yang").toString();
-        builder.setYangModules(ImmutableList.of(module));
+        builder.setYangModules(List.of(module));
         final var configuration = builder.build();
         startLyv(configuration, formatter);
         runDependendsTest("ietf-ipv6-router-advertisements_non-recursive-dependencies");
@@ -75,7 +74,7 @@ public class DependsTest extends FormatTest {
         builder.setDependConfiguration(true, false, true,
                 new HashSet<>());
         final String module = Paths.get(yangPath).resolve("ietf-ipv6-unicast-routing@2018-03-13.yang").toString();
-        builder.setYangModules(ImmutableList.of(module));
+        builder.setYangModules(List.of(module));
         final var configuration = builder.build();
         startLyv(configuration, formatter);
         runDependendsTest("ietf-ipv6-router-advertisements_non-recursive-only-submodules-dependencies");
@@ -87,7 +86,7 @@ public class DependsTest extends FormatTest {
         builder.setDependConfiguration(true, true, false,
                 new HashSet<>());
         final String module = Paths.get(yangPath).resolve("ietf-ipv6-unicast-routing@2018-03-13.yang").toString();
-        builder.setYangModules(ImmutableList.of(module));
+        builder.setYangModules(List.of(module));
         final var configuration = builder.build();
         startLyv(configuration, formatter);
         runDependendsTest("ietf-ipv6-router-advertisements_non-recursive-only-imports-dependencies");
@@ -99,7 +98,7 @@ public class DependsTest extends FormatTest {
         builder.setDependConfiguration(false, false, false,
                 new HashSet<>(Collections.singleton("ietf-ipv6-router-advertisements")));
         final String module = Paths.get(yangPath).resolve("ietf-ipv6-unicast-routing@2018-03-13.yang").toString();
-        builder.setYangModules(ImmutableList.of(module));
+        builder.setYangModules(List.of(module));
         final var configuration = builder.build();
         startLyv(configuration, formatter);
         runDependendsTest("ietf-ipv6-router-advertisements_exclude-module-dependencies");
